--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -40,8 +40,50 @@
         </div>
       </section>
 
-      <section class="favourite-coffee"></section>
-      <section class="about"></section>
+      <section class="favourite-coffee">
+        <h2>Choose your <span>favorite</span> coffee</h2>
+        <div class="favourite_carousel">
+          <img src="./images/carousel_arrow_left.svg" alt="Carousel Left Arrow" class="carousel_arrow-left">
+          <div class="carousel_slide">
+            <img src="./images/carousel_slide_1.svg" alt="Frappuccino">
+            <h3>S’mores Frappuccino</h3>
+            <p>This new drink takes an espresso and mixes it with brown sugar and
+              cinnamon before being topped with oat milk.</p>
+            <span class="carousel_slide_price">$5.50</span>
+          </div>
+          <img src="./images/carousel_arrow_right.svg" alt="Carousel Right Arrow" class="carousel_arrow-right">
+        </div>
+        <div class="carousel_pagination">
+          <span class="carousel_pagination_control active"></span>
+          <span class="carousel_pagination_control"></span>
+          <span class="carousel_pagination_control"></span>
+        </div>
+      </section>
+
+      <section class="about">
+        <h2>Resource is <span>the perfect and cozy place</span> where
+          you can enjoy a variety of hot beverages, relax, catch up
+          with friends, or get some work done.</h2>
+        <div class="about_gallery">
+          <div class="about_gallery_column">
+            <div class="about_gallery_photo photo_1">
+             <img src="./images/about_photo_1.svg" alt="Photo 1" class="photo_1">
+            </div>
+            <div class="about_gallery_photo photo_2">
+              <img src="./images/about_photo_2.svg" alt="Photo 2" class="photo_2">
+            </div>
+          </div>
+          <div class="about_gallery_column">
+            <div class="about_gallery_photo photo_3">
+              <img src="./images/about_photo_3.svg" alt="Photo 3" class="photo_3">
+             </div>
+             <div class="about_gallery_photo photo_4">
+               <img src="./images/about_photo_4.svg" alt="Photo 4" class="photo_4">
+             </div>
+          </div>
+        </div>
+      </section>
+
       <section class="mobile-app"></section>
     </main>
     
