feat: add section Mobile App and Footer; add draft on menu.html

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -32,7 +32,7 @@
     <main class="main">
       <section class="enjoy">
         <div class="enjoy_container">
-          <div class="enjoy_heading"><span>Enjoy</span> premium coffee at our charming cafe</div>
+          <h1 class="enjoy_heading"><span>Enjoy</span> premium coffee at our charming cafe</h1>
           <div class="enjoy_text">With its inviting atmosphere and delicious coffee options, 
             the Coffee House Resource is a popular destination for coffee lovers and those 
             seeking a warm and inviting space to enjoy their favorite beverage.</div>
@@ -84,11 +84,41 @@
         </div>
       </section>
 
-      <section class="mobile-app"></section>
+      <section class="mobile-app">
+        <div class="mobile-app_offer">
+          <h2><span>Download</span> our apps to start ordering</h2>
+          <p>Download the Resource app today and experience the comfort
+            of ordering your favorite coffee from wherever you are</p>
+          <div class="buy-app_buttons">
+            <a href="#" class="appstore-button">
+              <img src="./images/appstore_default.svg" alt="App Store">
+            </a>
+            <a href="#" class="googleplay-button">
+              <img src="./images/googleplay_default.svg" alt="Google Play">
+            </a>
+          </div>  
+        </div>
+        <img src="./images/mobile_app_screens.svg" alt="Mobile Screens">
+      </section>
     </main>
     
     <footer class="footer">
-
+      <div class="footer_container">
+        <div class="social-media">
+          <h2 class="footer_slogan">Sip, Savor, Smile. <span>It’s coffee time!</span></h2>
+          <ul>
+            <li><a href="#" class="twitter"><img src="./images/twitter_icon.svg" alt="Twitter"></a></li>
+            <li><a href="#" class="instagram"><img src="./images/instagram_icon.svg" alt="Instagram"></a></li>
+            <li><a href="#" class="facebook"><img src="./images/facebook_icon.svg" alt="Facebook"></a></li>
+          </ul>
+        </div>
+        <ul class="contacts">
+          <h3 class="contacts_title">Contact us</h3>
+          <li><a href="" class="contact_link"><img src="./images/contact_map-icon.svg" alt="Map">8558 Green Rd., LA</a></li>
+          <li><a href="" class="contact_link"><img src="./images/contact_phone-icon.svg" alt="Phone">+1 (603) 555-0123</a></li>
+          <li><a href="" class="contact_link"><img src="./images/contact_clock-icon.svg" alt="Clock">Mon-Sat: 9:00 AM – 23:00 PM</a></li>
+        </ul>
+      </div>
     </footer>
   
   </div>
