--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -15,7 +15,7 @@
   <div class="wrapper">
     <header id="header">
       <div class="header_container">
-        <a href="#"><img src="./images/logo.svg" alt="Coffee House"></a>
+        <a href="#" class="header_logo"><img src="./images/logo.svg" alt="Coffee House"></a>
         <nav>
           <ul class="nav_list">
             <li class="nav_list-item"><a href="#favorite-coffee_section" class="nav_list-item_link">Favorite coffee</a></li>
@@ -24,7 +24,7 @@
             <li class="nav_list-item"><a href="#footer_main_section" class="nav_list-item_link">Contact us</a></li>
           </ul>
         </nav>
-        <a href="menu.html" class="nav_menu-link">Menu<img src="./images/coffee-cup-icon.svg" alt="Menu Icon"></a>
+        <a href="menu.html" class="nav_menu-link home_page">Menu<img src="./images/coffee-cup-icon.svg" alt="Menu Icon"></a>
       </div>
     </header>
     
@@ -33,8 +33,9 @@
         <div class="enjoy_container">
           <h1><span>Enjoy</span> premium coffee at our charming cafe</h1>
           <p>With its inviting atmosphere and delicious coffee options, 
-            the Coffee<br>House Resource is a popular destination for coffee lovers and those<br> 
-            seeking a warm and inviting space to enjoy their favorite beverage.
+            the Coffee House Resource is a popular destination for coffee 
+            lovers and those seeking a warm and inviting space to enjoy their 
+            favorite beverage.
           </p>
           <a href="menu.html" class="enjoy_button">
             <span class="enjoy_button-text">Menu</span>
