feat: add responsiveness for sections Enjoy, Favorites, About; fix: improve responsive behaviour for Mobile App block

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -25,6 +25,9 @@
           </ul>
         </nav>
         <a href="menu.html" class="nav_menu-link home_page">Menu<img src="./images/coffee-cup-icon.svg" alt="Menu Icon"></a>
+        <div class="burger-menu_button">
+          <img src="./images/burger-menu-default-icon.svg" alt="Burger Menu">
+        </div> 
       </div>
     </header>
     
@@ -126,7 +129,9 @@
             </a>
           </div>  
         </div>
-        <img src="./images/mobile_app_screens.png" alt="Mobile Screens" class="mobile-app_image">      
+        <div class="mobile-app_image">
+          <img src="./images/mobile_app_screens.png" alt="Mobile Screens"> 
+        </div>     
       </section>
     </main>
     
