feat: add responsiveness for headers in main and menu pages; feat: add responsiveness for the menu page footer

--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -13,18 +13,23 @@
 
 <body>
   <div class="wrapper">
-    <header id="header">
+    <header id="header_menu">
       <div class="header_container">
         <a href="index.html"><img src="./images/logo.svg" alt="Coffee House"></a>
-        <nav>
-          <ul class="nav_list">
-            <li class="nav_list-item"><a href="index.html#favorite-coffee_section" class="nav_list-item_link">Favorite coffee</a></li>
-            <li class="nav_list-item"><a href="index.html#about_section" class="nav_list-item_link">About</a></li>
-            <li class="nav_list-item"><a href="index.html#mobile-app_section" class="nav_list-item_link">Mobile app</a></li>
-            <li class="nav_list-item"><a href="#footer_main_section" class="nav_list-item_link">Contact us</a></li>
-          </ul>
-        </nav>
-        <div class="nav_menu-link menu_page">Menu<img src="./images/coffee-cup-icon.svg" alt="Menu Icon"></div>
+        <div class="header_navigation-block">
+          <nav>
+            <ul class="nav_list">
+              <li class="nav_list-item"><a href="index.html#favorite-coffee_section" class="nav_list-item_link">Favorite coffee</a></li>
+              <li class="nav_list-item"><a href="index.html#about_section" class="nav_list-item_link">About</a></li>
+              <li class="nav_list-item"><a href="index.html#mobile-app_section" class="nav_list-item_link">Mobile app</a></li>
+              <li class="nav_list-item"><a href="#footer_menu" class="nav_list-item_link">Contact us</a></li>
+            </ul>
+          </nav>
+          <div class="nav_menu-link menu_page">Menu<img src="./images/coffee-cup-icon.svg" alt="Menu Icon"></div>
+        </div>
+        <div class="burger-menu_button">
+          <img src="./images/burger-menu-default-icon.svg" alt="Burger Menu">
+        </div>
       </div>
     </header>
     
@@ -138,7 +143,7 @@
       </section>
     </main>
     
-    <footer class="footer" id="footer_main_section">
+    <footer class="footer" id="footer_menu">
       <div class="footer_container">
         <div class="footer_social-media">
           <h2>Sip, Savor, Smile. <span>It’s coffee time!</span></h2>
@@ -177,7 +182,7 @@
           </ul>
         </div>
       </div>
-    </footer>  
+    </footer>
   </div>
 </body>
 </html>
