feat: add video into the Enjoy section

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -36,15 +36,21 @@
     <main class="main">
       <section class="enjoy">
         <div class="enjoy_container">
-          <h1><span>Enjoy</span> premium coffee at our charming cafe</h1>
-          <p>With its inviting atmosphere and delicious coffee options, 
-            the Coffee House Resource is a popular destination for coffee 
-            lovers and those seeking a warm and inviting space to enjoy their 
-            favorite beverage.
-          </p>
-          <a href="menu.html" class="enjoy_button">
-            <span class="enjoy_button-text">Menu</span>
-          </a>
+          <video autoplay muted loop>
+            <source src="./images/video-720p.webm" type="video/webm">
+            Your browser does not support the video tag.
+          </video>
+          <div class="enjoy_text">
+            <h1><span>Enjoy</span> premium coffee at our charming cafe</h1>
+            <p>With its inviting atmosphere and delicious coffee options, 
+              the Coffee House Resource is a popular destination for coffee 
+              lovers and those seeking a warm and inviting space to enjoy their 
+              favorite beverage.
+            </p>
+            <a href="menu.html" class="enjoy_button">
+              <span class="enjoy_button-text">Menu</span>
+            </a>
+          </div>
         </div>
       </section>
 
