--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -65,41 +65,43 @@
               <path d="M18.5 12H6M6 12L12 6M6 12L12 18" stroke="#403F3D" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
           </div>
-          <div class="carousel_slide-window">
-            <div class="carousel_slide-train"> 
-              <div class="carousel_slide">
-                <img src="./images/carousel_slide_1.svg" alt="Frappuccino">
-                <h3>S’mores Frappuccino</h3>
-                <p>This new drink takes an espresso and mixes it with brown sugar and
-                  cinnamon before being topped with oat milk.</p>
-                <span>$5.50</span>
-              </div>
-              <div class="carousel_slide">
-                <img src="./images/carousel_slide_2.svg" alt="Caramel Macchiato">
-                <h3>Caramel Macchiato</h3>
-                <p>Fragrant and unique classic espresso with rich caramel-peanut syrup, 
-                  with cream under whipped thick foam.</p>
-                <span>$5.00</span>
-              </div>
-              <div class="carousel_slide">
-                <img src="./images/carousel_slide_3.svg" alt="Ice coffee">
-                <h3>Ice coffee</h3>
-                <p>A popular summer drink that tones and invigorates. Prepared 
-                  from coffee, milk and ice.</p>
-                <span>$4.50</span>
+          <div class="carousel_switching-area">
+            <div class="carousel_slide-window">
+              <div class="carousel_slide-train"> 
+                <div class="carousel_slide">
+                  <img src="./images/carousel_slide_1.svg" alt="Frappuccino">
+                  <h3>S’mores Frappuccino</h3>
+                  <p>This new drink takes an espresso and mixes it with brown sugar and
+                    cinnamon before being topped with oat milk.</p>
+                  <span>$5.50</span>
+                </div>
+                <div class="carousel_slide">
+                  <img src="./images/carousel_slide_2.svg" alt="Caramel Macchiato">
+                  <h3>Caramel Macchiato</h3>
+                  <p>Fragrant and unique classic espresso with rich caramel-peanut syrup, 
+                    with cream under whipped thick foam.</p>
+                  <span>$5.00</span>
+                </div>
+                <div class="carousel_slide">
+                  <img src="./images/carousel_slide_3.svg" alt="Ice coffee">
+                  <h3>Ice coffee</h3>
+                  <p>A popular summer drink that tones and invigorates. Prepared 
+                    from coffee, milk and ice.</p>
+                  <span>$4.50</span>
+                </div>
               </div>
             </div>
-          </div>  
+            <div class="carousel_pagination">
+              <div class="carousel_pagination_control active"><div></div></div>
+              <div class="carousel_pagination_control"><div></div></div>
+              <div class="carousel_pagination_control"><div></div></div>
+            </div>
+          </div>    
           <div class="carousel_arrow right">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
               <path d="M6 12H18.5M18.5 12L12.5 6M18.5 12L12.5 18" stroke="#403F3D" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
           </div>
-        </div>
-        <div class="carousel_pagination">
-          <div class="carousel_pagination_control active"><div></div></div>
-          <div class="carousel_pagination_control"><div></div></div>
-          <div class="carousel_pagination_control"><div></div></div>
         </div>
       </section>
 
